# Homework_by_Bogdan

./: README.md  main.py  pyproject.toml
src/: category.py  product.py
tests/: test_classes.py
